--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 PORT=3000
 APP_URL=http://localhost
+TOKEN_PATH=/oauth/token
+BASE_URL=
+AUTH_URL=
+AUTH_CLIENT_ID=
+AUTH_CLIENT_SECRET=
+AUTH_AUDIENCE=
