--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Guillermo Segura",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
