--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "reflect-metadata": "^0.2.1"
   },
   "devDependencies": {
