chore: updated env example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 PORT=3001
 APP_URL=http://localhost
-BASE_URL=
-AUTH_URL=
+BASE_URL=https://YOUR-TENANT-URL.vii.au01.mattr.global
+AUTH_URL=https://auth.au01.mattr.global
 AUTH_CLIENT_ID=
 AUTH_CLIENT_SECRET=
-AUTH_AUDIENCE=
+AUTH_AUDIENCE=https://YOUR-TENANT-URL.vii.au01.mattr.global
+ENCRYPTION_PAYLOAD_TYPE=https://mattr.global/schemas/verifiable-credential/offer/OidcCredentialProvider
